Change la bannière a la demande de l'utilisateur...

--- a/squelettes/default.tpl.html
+++ b/squelettes/default.tpl.html
@@ -16,10 +16,10 @@
     {{include page="PageMenuHaut" doubleclic="1"}}
   </nav>
   <header id='mainHeader'>
-    <a href='./'>
+    <!--<a href='./'>
       <img src='themes/insertion-egalite/images/logo.png' alt="Logo réseau insertion égalité"/>
     </a>
-    <h1>Réseau national de l'enseignement technique agricole</h1>
+    <h1>Réseau national de l'enseignement technique agricole</h1>-->
   </header>
   <footer id='mainFooter'>
     {{include page="PageFooter" doubleclic="1"}}
